; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm_adsp.c_wm_adsp2_disable_core.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm_adsp.c_wm_adsp2_disable_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm_adsp = type { i64, i32 }

@ADSP2_RDMA_CONFIG_1 = common dso_local global i64 0, align 8
@ADSP2_WDMA_CONFIG_1 = common dso_local global i64 0, align 8
@ADSP2_WDMA_CONFIG_2 = common dso_local global i64 0, align 8
@ADSP2_CONTROL = common dso_local global i64 0, align 8
@ADSP2_SYS_ENA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wm_adsp*)* @wm_adsp2_disable_core to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wm_adsp2_disable_core(%struct.wm_adsp* %0) #0 {
  %2 = alloca %struct.wm_adsp*, align 8
  store %struct.wm_adsp* %0, %struct.wm_adsp** %2, align 8
  %3 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %4 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %7 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @ADSP2_RDMA_CONFIG_1, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @regmap_write(i32 %5, i64 %10, i32 0)
  %12 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %13 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %16 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @ADSP2_WDMA_CONFIG_1, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @regmap_write(i32 %14, i64 %19, i32 0)
  %21 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %22 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %25 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @ADSP2_WDMA_CONFIG_2, align 8
  %28 = add nsw i64 %26, %27
  %29 = call i32 @regmap_write(i32 %23, i64 %28, i32 0)
  %30 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %31 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.wm_adsp*, %struct.wm_adsp** %2, align 8
  %34 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* @ADSP2_CONTROL, align 8
  %37 = add nsw i64 %35, %36
  %38 = load i32, i32* @ADSP2_SYS_ENA, align 4
  %39 = call i32 @regmap_update_bits(i32 %32, i64 %37, i32 %38, i32 0)
  ret void
}

declare dso_local i32 @regmap_write(i32, i64, i32) #1

declare dso_local i32 @regmap_update_bits(i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
